--- a/libs/base/CMakeLists.txt
+++ b/libs/base/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(libbase STATIC
         libbase/configure_working_directory.cpp
         libbase/fast_random.cpp
+        libbase/stats.cpp
 )
 
 target_include_directories(libbase PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
@@ -9,6 +10,7 @@ if (BUILD_TESTING)
     add_executable(libbase_tests
             libbase/configure_working_directory_tests.cpp
             libbase/fast_random_tests.cpp
+            libbase/stats_tests.cpp
     )
     target_link_libraries(libbase_tests PRIVATE libbase GTest::gtest_main)
     add_test(NAME libbase_tests COMMAND libbase_tests)
